fixed up alignment of sign in and sign up div for mobile view

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,16 +11,20 @@ body {
   margin-top: 5%;
 }
 .form-horizontal-signin{
-  margin-right: 10%;
+  margin-right: 5%;
+  margin-bottom: 5%;
+  margin-left: 5%;
   box-sizing: border-box;
   padding: 20px;
   padding-right: 25px;
   padding-left: 25px;
   border-radius: 6px;
   background-color: #eee;
+
 }
 .form-horizontal-signup{
-  margin-left: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
   box-sizing: border-box;
   padding: 20px;
   padding-left: 25px;
@@ -34,4 +38,5 @@ body {
   border-radius: 6px;
   background-color: #eee;
 }
+
 
